[package]
name = "turnkey_api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
progenitor = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16", features = ["serde", "v4"] }

base64 = { version = "0.22", default-features = false, features = ["std"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]

# Used by example
tokio = { version = "1.44.1", features = ["full"] }
